--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "liz!"
   ],
   "version": "0.1.0",
-  "author": "pofo",
+  "author": "Charlie Lu",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
