--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "next": "12.0.7",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
     "react-tsparticles": "^1.37.5",
     "sass": "^1.45.1",
